<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingBottom="@dimen/common_padding_min">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline6"
        tools:text="5x2"
        android:background="?colorSurface"
        android:textColor="?colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvReultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/common_padding_min"
        android:layout_marginBottom="@dimen/common_padding_min"
        android:textAppearance="?attr/textAppearanceHeadline3"
        tools:text="10.0"
        android:gravity="center_vertical|end"
        android:background="?colorSurface"
        android:textColor="?colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones1"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"/>



    <LinearLayout
        android:id="@+id/llBotones1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio = "H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones2"
        >
        <Button
            android:id="@+id/btnClear"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/point_clear"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:background="@color/teal_200"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAtras"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            app:icon="@drawable/ic_erase2"
            android:onClick="onClickButton"
            app:iconGravity="textStart"
            android:backgroundTint="@color/teal_700"
            app:iconPadding="@dimen/icon_padding"
            />
        <Button
            android:id="@+id/btnSuma"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_suma"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:backgroundTint="@color/teal_700"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llBotones2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio = "H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones3">
        <Button
            android:id="@+id/btn1"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_1"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btn2"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_2"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btn3"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_3"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btnResta"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_resta"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_700"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBotones3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio = "H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones4">
        <Button
            android:id="@+id/btn4"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_4"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btn5"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_5"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btn6"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_6"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btnMultiplicacion"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:onClick="onClickButton"
            android:text="@string/point_multiplicacion"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_700"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBotones4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio = "H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llBotones5"
        >
        <Button
            android:id="@+id/btn7"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_7"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"
            />
        <Button
            android:id="@+id/btn8"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_8"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btn9"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_9"
            android:onClick="onClickButton"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"/>
        <Button
            android:id="@+id/btnDivision"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:onClick="onClickButton"
            android:text="@string/point_division"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_700"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llBotones5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onClickButton"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio = "H, 4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btnDecimal"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_decimal"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_700"
            android:onClick="onClickButton"/>
        <Button
            android:id="@+id/btn0"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="@string/point_0"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_200"
            android:onClick="onClickButton"
           />
        <Button
            android:id="@+id/btnResultado"
            android:layout_margin="@dimen/common_padding_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/point_igual"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:backgroundTint="@color/teal_700"
            android:onClick="onClickButton"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>